Updade python version of professors example

--- a/VA/work1/FEM_lucas_schroeder.ipynb
+++ b/VA/work1/FEM_lucas_schroeder.ipynb
@@ -119,12 +119,15 @@
     "            K = K + Kee\r\n",
     "    \r\n",
     "    # Aplicando as condicoes de contorno geometricas\r\n",
-    "    cc = [1, 2] # Graus de Liberdade que devem ser restritos em ordem crescente.\r\n",
-    "    for j in range(1, len(cc)+1):\r\n",
-    "        M = np.delete(M, cc[j-1]-j, axis=1)\r\n",
-    "        M = np.delete(M, cc[j-1]-j, axis=0)\r\n",
-    "        K = np.delete(K, cc[j-1]-j, axis=1)\r\n",
-    "        K = np.delete(K, cc[j-1]-j, axis=0)\r\n",
+    "    cc = [1, 2] # Graus de Liberdade que devem ser restritos\r\n",
+    "    # Ordenando os GL para mais tarde reinserir na matrix de modos\r\n",
+    "    idx = np.array(cc).argsort()\r\n",
+    "    cc = np.array(cc)[idx].tolist()\r\n",
+    "\r\n",
+    "    M = np.delete(M, np.asarray(cc)-1, axis=1)\r\n",
+    "    M = np.delete(M, np.asarray(cc)-1, axis=0)\r\n",
+    "    K = np.delete(K, np.asarray(cc)-1, axis=1)\r\n",
+    "    K = np.delete(K, np.asarray(cc)-1, axis=0)\r\n",
     "\r\n",
     "    # Problema de autovalor generalizado. W é um vetor e A uma matrix com as colunas normalizadas\r\n",
     "    W, Vc = eig(K, M)\r\n",
@@ -448,7 +451,7 @@
    "display_name": "Python 3.9.4 64-bit ('venv': venv)"
   },
   "interpreter": {
-   "hash": "377f039d88a0f9c5791e0cfb0b6c5d82d1ead839da8caf4c4bf722cac36c15ff"
+   "hash": "02527d8ca5c65af2ede56b2d82ee91e660e182a92b14a4e2ad38e2cd32139a84"
   }
  },
  "nbformat": 4,
